<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_new_port"
    android:layoutDirection="ltr"
    android:background="@drawable/win_xp_back">

    <EditText
        android:id="@+id/name"
        android:layout_width="265dp"
        android:layout_height="52dp"
        android:layout_alignTop="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="37dp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="47dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="37dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:checkedButton="@+id/radio_default"
        android:orientation="horizontal"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/radio_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Default"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/radio_kitchen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kitchen"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/radio_bathroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toilet"
            android:textSize="10sp" />


        <RadioButton
            android:id="@+id/radio_bedroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bedroom"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/radio_livingroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livingroom"
            android:textSize="10sp" />

    </RadioGroup>


    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="150dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/cancelButton"
        android:layout_marginEnd="81dp"
        android:text="@string/apply" />


</RelativeLayout>