<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="@android:color/background_light">

    <ImageView
        android:id="@+id/full_sketch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/current_image_taken" />


    <LinearLayout
        android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/control_background">

        <Button
            android:id="@+id/clear"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:text="@string/clear" />

        <ImageButton
            android:id="@+id/line"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:contentDescription="@string/description_info"
            android:cropToPadding="true"
            android:src="@drawable/line" />

        <ImageButton
            android:id="@+id/free_rect"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:contentDescription="@string/description_info"
            android:cropToPadding="true"
            android:src="@drawable/polygon" />

        <ImageButton
            android:id="@+id/circle"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_info"
            android:cropToPadding="true"
            android:src="@drawable/circle" />

        <ImageButton
            android:id="@+id/rect"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:contentDescription="@string/description_info"
            android:cropToPadding="true"
            android:src="@drawable/rect" />

        <Button
            android:id="@+id/save"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:text="@string/Done" />


    </LinearLayout>

</RelativeLayout>